[project]
name = "local-llm-with-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.3.25,<0.4.0)",
    "chromadb (>=1.0.0,<2.0.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
]

[project.scripts]
app = "app:main"

[[tool.poetry.packages]]
include = "*.py"
from = "."

